--- a/notes.html
+++ b/notes.html
@@ -4,14 +4,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Notes</title>
-<link href="notes.css" rel="stylesheet">
+<link href="css/notes.css" rel="stylesheet">
 </head>
 <body>
 
 <!-- TOP NAVBAR -->
 <nav>
-  <div class="nav-logo"><h1>Notes</h1></div>
+    <div class="logo">
+    <img src="assets/images/sf.png" alt="SF Logo" class="logo-img">
+    <span>Notes</span>
+    </div>
+  <div class="nav-logo"><h1></h1></div>
   <div class="nav-links">
+    <a class="nav-link" href = "landingpage.html">Home</a>
     <a class="nav-link active">To-Do List</a>
     <a class="nav-link">Subjects</a>
   </div>
