--- a/playlists.html
+++ b/playlists.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>StudyFlix – Playlist</title>
-  <link rel="stylesheet" href="playlists.css">
+  <link rel="stylesheet" href="css/playlists.css">
 </head>
 <body>
 
   <!-- NAVBAR -->
 
   <nav class="navbar">
-     <div class="logo">
-    <img src="sf.png" alt="SF Logo" class="logo-img">
+    <div class="logo">
+    <img src="assets/images/sf.png" alt="SF Logo" class="logo-img">
     <span>StudyFlix</span>
     </div>
     <ul class="nav-links">
-      <li>Home</li>
+      <li><a href = "landingpage.html">Home</a></li>
       <li class="active">Playlists</li>
-      <li>Notes</li>
+      <li><a href = "notes.html">Notes</a></li>
     </ul>
     <div class="profile-icon">👤</div>
   </nav>
@@ -41,7 +41,7 @@
 
       <div class="item">
         <span class="num">1</span>
-        <img src="thumb1.jpg" alt="">
+        <img src="assets/images/thumb1.jpg" alt="">
         <div class="text">
           <h3>1.1 Arrays in Data Structures</h3>
           <p>An array is a data structure that stores multiple values of the same type in contiguous memory locations. Each element is accessed using an index, starting from 0. Arrays allow fast access but have a fixed size.</p>
@@ -51,7 +51,7 @@
 
       <div class="item">
         <span class="num">2</span>
-        <img src="thumb2.jpg" alt="">
+        <img src="assets/images/thumb2.jpg" alt="">
         <div class="text">
           <h3>1.2 Arrays Operations</h3>
           <p>Array operations are actions performed on arrays like insertion, deletion, traversal, searching, and updating. They help in managing and manipulating the stored data.</p>
@@ -61,7 +61,7 @@
 
       <div class="item">
         <span class="num">3</span>
-        <img src="thumb3.jpg" alt="">
+        <img src="assets/images/thumb3.jpg" alt="">
         <div class="text">
           <h3>1.3 Pointers & Arrays</h3>
           <p>Pointers store the address of a variable and arrays store multiple values in contiguous memory. In arrays, the array name acts like a pointer to the first element.Pointers are used to access and manipulate array elements.</p>
@@ -71,7 +71,7 @@
 
       <div class="item">
         <span class="num">4</span>
-        <img src="thumb4.jpg" alt="">
+        <img src="assets/images/thumb4.jpg" alt="">
         <div class="text">
           <h3>1.4 2D Arrays</h3>
           <p>A 2D array is an array of arrays used to store data in rows and columns. It is commonly used to represent tables or matrices. Elements are accessed using two indices: row and column.</p>
