Add new images and profile page, and update existing HTML and CSS files

--- a/landingpage.html
+++ b/landingpage.html
@@ -22,8 +22,8 @@
         </ul>
 
         <div class="profile">
-            <span class="streak">🔥 7</span>
-            <span class="profile-icon">👤</span>
+            <span class="streak">🔥 1</span>
+            <a href="profile.html"><span class="profile-icon">👤</span></a>
         </div>
     </nav>
 
