--- a/playlists.html
+++ b/playlists.html
@@ -19,7 +19,7 @@
       <li class="active">Playlists</li>
       <li><a href = "notes.html">Notes</a></li>
     </ul>
-    <div class="profile-icon">👤</div>
+    <a href="profile.html"><div class="profile-icon">👤</div></a>
   </nav>
 
   <!-- CONTENT -->
