--- a/notes.html
+++ b/notes.html
@@ -9,23 +9,17 @@
 <body>
 
 <!-- TOP NAVBAR -->
-<nav>
+<nav class="navbar">
     <div class="logo">
-    <img src="assets/images/sf.png" alt="SF Logo" class="logo-img">
-    <span>Notes</span>
+        <img src="assets/images/sf.png" alt="SF Logo" class="logo-img">
+        <span>StudyFlix</span>
     </div>
-  <div class="nav-logo"><h1></h1></div>
-  <div class="nav-links">
-    <a class="nav-link" href = "landingpage.html">Home</a>
-    <a class="nav-link active">To-Do List</a>
-    <a class="nav-link">Subjects</a>
-  </div>
-  <button class="avatar-btn" title="Profile">
-    <svg viewBox="0 0 24 24">
-      <circle cx="12" cy="8" r="4"/>
-      <path d="M4 20c0-4 3.58-7 8-7s8 3 8 7"/>
-    </svg>
-  </button>
+    <ul class="nav-links">
+        <li><a href="landingpage.html">Home</a></li>
+        <li class="active">Notes</li>
+        <li><a href="playlists.html">Playlists</a></li>
+    </ul>
+    <a href="profile.html"><div class="profile-icon">👤</div></a>
 </nav>
 
 <!-- MAIN -->
